<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_medical_information_24"
            android:title="@string/details" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_medical_services_24"
            android:title="@string/Specialised_Doc"
            />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/outline_arrow_circle_right_24"/>
    </group>
</menu>