<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doc_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitie.Registerdoctor">


    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_signup"
        android:layout_margin="10dp"
        android:hint="@string/enter_Name"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_margin="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        android:inputType="textVisiblePassword"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_margin="10dp"
        android:hint="@string/enter_contact"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />


    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_hospitalname"
        android:layout_margin="10dp"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/et_hospitalname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mobile"
        android:hint="@string/enter_hospitalname"
        android:layout_margin="10dp"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="17sp"
        />



    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_address"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:prompt="@string/gender_prompt"
        android:spinnerMode="dropdown"/>





    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_above="@+id/txt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />





    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select Gender"
        android:layout_below="@id/genderSpinner"
        >

        <AutoCompleteTextView
            android:id="@+id/genderDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>

