<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitie.Firstpage"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_of_a_doctor"
        android:scaleType="centerInside"
        android:background="@xml/rounded_background"
        android:src="@drawable/doctor"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txt_role"
        android:layout_marginBottom="50dp"
        android:clipToOutline="true"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/txt_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_role"
        android:layout_above="@id/btn_patient"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/btn_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/btn_patient"
        android:text="@string/doctor"/>


    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#000000"
        />




</RelativeLayout>