<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitie.Loginactivity"
    android:background="#FFFFFF"
    >


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />


    <EditText
        android:id="@+id/et_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/logo_img"
        android:layout_margin="10dp"
        android:hint="Enter Email address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mobile_no"
        android:layout_margin="10dp"
        android:autofillHints="ashuchoudhary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textSize="17sp"
        android:layout_margin="15dp"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/txt_passforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/txt_regster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#000000"
        />

</RelativeLayout>